fix merit overflow

--- a/resources/assets/styles/layouts/_dashboard.scss
+++ b/resources/assets/styles/layouts/_dashboard.scss
@@ -333,6 +333,7 @@ nav.dashboard-tabs {
 
     .modal__wrapper {
       width: 100%;
+      height: 100%;
       text-align: left;
     }
 
